fix various alignment issues (cross browser)

--- a/app/assets/stylesheets/_jstoolbar.sass
+++ b/app/assets/stylesheets/_jstoolbar.sass
@@ -48,21 +48,26 @@ $jstoolbar--icon-active-background: #eee
 
 .jstElements
   @include grid-block
-  justify-content: flex-end
   text-align: center
   margin-bottom: 0.25rem
   line-height: 1.6rem
+  justify-content: flex-end
 
   button
     @include grid-content
+    flex: 0 1 2rem
     padding: 0.25rem
     margin-left: 0.25rem
-    max-width: 1.625rem
     height: 1.625rem
+    width: 1.625rem
+    max-width: 1.625rem
     border: 1px solid $jstoolbar--icon-border
     background-color: $jstoolbar--icon-background
     color: $body-font-color
     border-radius: 2px
+    overflow-y: hidden
+    line-height: 1.3rem
+
     &:before
       @include icon-common
 
