--- a/app/assets/stylesheets/content/_in_place_editing.sass
+++ b/app/assets/stylesheets/content/_in_place_editing.sass
@@ -152,8 +152,9 @@ a.inplace-editing--trigger-link,
 
 .inplace-edit--control
   background: $inplace-edit--color--very-dark
-  width: 1.4375rem
-  height: 1.4375rem
+  width: 1.5rem
+  height: 1.5rem
+  line-height: 1.5rem
   border: 1px solid $inplace-edit--dark-background
   display: inline-block
   border-radius: 0.75rem
